--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
     "type": "module",
     "scripts": {
         "build": "vite build",
-        "dev": "vite"
+        "dev": "vite",
+        "test": "vitest",
+        "dev:all": "concurrently \"npm run dev\" \"php artisan serve --host=0.0.0.0 --port=8000\" \"php artisan schedule:work\""
     },
     "devDependencies": {
         "@inertiajs/vue3": "^2.0.0",
@@ -19,5 +21,8 @@
         "tailwindcss": "^3.2.1",
         "vite": "^7.0.7",
         "vue": "^3.4.0"
+    },
+    "dependencies": {
+        "vuestic-ui": "^1.10.3"
     }
 }
