--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
         "build": "vite build",
         "dev": "vite",
         "test": "vitest",
-        "dev:all": "concurrently \"npm run dev\" \"php artisan serve --host=0.0.0.0 --port=8000\" \"php artisan schedule:work\""
+        "dev:all": "concurrently \"php artisan serve --host=0.0.0.0 --port=8000\" \"npm run dev\" \"php artisan reverb:start\""
     },
     "devDependencies": {
         "@inertiajs/vue3": "^2.0.0",
@@ -16,7 +16,7 @@
         "@vitejs/plugin-vue": "^5.0.0",
         "autoprefixer": "^10.4.12",
         "axios": "^1.11.0",
-        "concurrently": "^9.0.1",
+        "concurrently": "^9.2.1",
         "laravel-echo": "^2.3.0",
         "laravel-vite-plugin": "^2.0.0",
         "postcss": "^8.4.31",
