--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
         "build": "vite build",
         "dev": "vite",
         "test": "vitest",
-        "dev:all": "concurrently \"php artisan serve --host=0.0.0.0 --port=8000\" \"npm run dev\" \"php artisan reverb:start\""
+        "dev:all": "concurrently \"php artisan serve --host=0.0.0.0 --port=8000\" \"npm run dev\" \"php artisan reverb:start\" \"php artisan schedule:work\""
     },
     "devDependencies": {
         "@inertiajs/vue3": "^2.0.0",
