--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-APP_NAME=Laravel
+APP_NAME="Support Tickets"
 APP_ENV=local
 APP_KEY=base64:yqY8Zk7em6iICA8o/RNDcf+rPLFT4Pv2K9/B7SJ2jyU=
 APP_DEBUG=true
