--- a/jsconfig.json
+++ b/jsconfig.json
@@ -6,5 +6,9 @@
             "ziggy-js": ["./vendor/tightenco/ziggy"]
         }
     },
-    "exclude": ["node_modules", "public"]
+    "include": [
+        "resources/js/**/*",
+        "jsconfig.json"
+    ],
+    "exclude": ["node_modules", "public", "vendor"]
 }
