--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
         "build": "vite build",
         "dev": "vite",
         "test": "vitest",
-        "dev:all": "node -e \"const fs = require('fs'); if (!fs.existsSync('public/storage')) { console.log('Link simbólico não encontrado. A criar...'); require('child_process').execSync('php artisan storage:link', {stdio: 'inherit'}); }\" && concurrently \"php artisan serve --host=0.0.0.0 --port=8000\" \"npm run dev\" \"php artisan reverb:start\" \"php artisan schedule:work\" \"php artisan queue:work\""
+        "dev:all": "node -e \"const fs = require('fs'); if (!fs.existsSync('public/storage')) { console.log('Link simbólico não encontrado. A criar...'); require('child_process').execSync('php artisan storage:link', {stdio: 'inherit'}); } if (!fs.existsSync('database/database.sqlite')) { console.log('Base de dados não encontrada. A criar e migrar...'); fs.writeFileSync('database/database.sqlite', ''); require('child_process').execSync('php artisan migrate --seed', {stdio: 'inherit'}); }\" && concurrently \"php artisan serve --host=0.0.0.0 --port=8000\" \"npm run dev\" \"php artisan reverb:start\" \"php artisan schedule:work\" \"php artisan queue:work\""
     },
     "devDependencies": {
         "@inertiajs/vue3": "^2.0.0",
