--- a/.env
+++ b/.env
@@ -76,3 +76,11 @@ VITE_REVERB_APP_KEY="${REVERB_APP_KEY}"
 VITE_REVERB_HOST="${REVERB_HOST}"
 VITE_REVERB_PORT="${REVERB_PORT}"
 VITE_REVERB_SCHEME="${REVERB_SCHEME}"
+
+FIREBASE_PROJECT_ID=support-tickets-app-31f91
+VITE_FIREBASE_API_KEY="AIzaSyDYcPWGzonpYgerhNT0k3wbSl6jh2Z87Xg"
+VITE_FIREBASE_AUTH_DOMAIN="support-tickets-app-31f91.firebaseapp.com"
+VITE_FIREBASE_PROJECT_ID="support-tickets-app-31f91"
+VITE_FIREBASE_STORAGE_BUCKET="support-tickets-app-31f91.firebasestorage.app"
+VITE_FIREBASE_MESSAGING_SENDER_ID="930751298095"
+VITE_FIREBASE_APP_ID="1:930751298095:web:328512a103bd0dfeb2a4da"
