--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
         "vue": "^3.4.0"
     },
     "dependencies": {
+        "firebase": "^12.9.0",
         "material-design-icons-iconfont": "^6.7.0",
         "vuestic-ui": "^1.10.3"
     }
