--- a/.env
+++ b/.env
@@ -84,3 +84,4 @@ VITE_FIREBASE_PROJECT_ID="support-tickets-app-31f91"
 VITE_FIREBASE_STORAGE_BUCKET="support-tickets-app-31f91.firebasestorage.app"
 VITE_FIREBASE_MESSAGING_SENDER_ID="930751298095"
 VITE_FIREBASE_APP_ID="1:930751298095:web:328512a103bd0dfeb2a4da"
+VITE_FIREBASE_VAPID_KEY="BOZ1elZMkEtJqG9fqU-6mQP4LSEwhXMUfJFVVaNnq07_aHJkPX1PQJtTeEpFSIkXQrP7pIWRMS-kLOs35SbdYB4"
