--- a/composer.json
+++ b/composer.json
@@ -14,6 +14,7 @@
         "laravel/reverb": "^1.0",
         "laravel/sanctum": "^4.0",
         "laravel/tinker": "^2.10.1",
+        "spatie/laravel-activitylog": "^4.12",
         "tightenco/ziggy": "^2.0"
     },
     "require-dev": {
